--- a/apps/templates/dashboard.html
+++ b/apps/templates/dashboard.html
@@ -53,7 +53,7 @@
         <li class="dropdown">
             <a href="#" class="dropdown-toggle">Inventory</a>
             <ul class="dropdown-menu">
-              <li><a href="/employee-list/">Employee List</a></li>
+              <li><a href="/inventory-list/">Inventory List</a></li>
              
             </ul>
         </li>
