--- a/apps/templates/login.html
+++ b/apps/templates/login.html
@@ -68,7 +68,7 @@
     <button type="button" id="BtnLogin" class="btn btn-primary">Submit</button>
   </form>
 
-  <script src="static/login_function.js"></script>
+  <script src="static/login_function2.js"></script>
 
 </body>
 </html>
