--- a/apps/templates/dashboard.html
+++ b/apps/templates/dashboard.html
@@ -16,6 +16,16 @@
     <title>DashBoard</title>
 </head>
 
+<style>
+   
+
+   
+   
+    </style>
+
+
+
+
 <body>
     <nav class="navbar navbar-dark bg-primary" >
         <span class="open-slide">
