--- a/apps/templates/dashboard.html
+++ b/apps/templates/dashboard.html
@@ -67,6 +67,15 @@
              
             </ul>
         </li>
+
+
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle">Job Order</a>
+            <ul class="dropdown-menu">
+              <li><a href="/ticketing/">Job Ticketing</a></li>
+             
+            </ul>
+        </li>
         
         
         <li class="dropdown">
