--- a/apps/templates/job_order/update_ticketing_it.html
+++ b/apps/templates/job_order/update_ticketing_it.html
@@ -35,22 +35,16 @@
         </div>
 
         <br>
-        <button type="button" class="btn btn-primary" id="btn_save_job_order">Update</button>
+        <input type="text" class="form-control" id="update_jo_id" value="{{job_order_data.id }}" hidden>
+
+        <br>
+        <button type="button" class="btn btn-primary" id="btn_update_jo">Update</button>
 
 
     </div>
 
 
-    
-
-    
- 
-
- 
-
-        
-
-      
+     
 </div>
       
          
@@ -64,7 +58,7 @@
     
     
     
-    <!-- <script src="/static/job_order/job_order.js"></script> -->
+    <script src="/static/job_order/update_job_order.js"></script>
     
     
     
