--- a/apps/templates/login.html
+++ b/apps/templates/login.html
@@ -65,10 +65,14 @@
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required>
 
-    <button type="button" id="BtnLogin" class="btn btn-primary">Submit</button>
+    <button type="button" id="BtnLogin" class="btn btn-primary">Login</button>
+    <a href="/-temp-sign-up" class="btn btn-link">Sign Up</a>
   </form>
 
-  <script src="static/login_function2.js"></script>
+  <script src="static/login.js"></script>
+
+ 
+    
 
 </body>
 </html>
