--- a/apps/templates/inventory/inventory_list.html
+++ b/apps/templates/inventory/inventory_list.html
@@ -69,6 +69,42 @@
                         
                         
                       </div>
+
+                      <br>
+
+                      <div class="row g-3">
+
+                        <div class="col-md">
+                          <div class="form-floating">
+                            <input type="date" class="form-control" id="inventory_purchase_date"  >
+                            <label for="floatingInputGrid" class="label-large">Purchase Date</label>
+            
+                          
+                          </div>
+                        </div>
+    
+                  
+                        <div class="col-md">
+                          <div class="form-floating">
+                            <input type="text" class="form-control" id="inventory_si_no"  >
+                            <label for="floatingInputGrid" class="label-large">Sales Invoice No.</label>
+            
+                          
+                          </div>
+                        </div>
+
+                        <div class="col-md">
+                          <div class="form-floating">
+                            <input type="number" class="form-control" id="inventory_quantity"  >
+                            <label for="floatingInputGrid" class="label-large">Quantity</label>
+            
+                          
+                          </div>
+                        </div>
+                        
+                        
+                      </div>
+
     
                       <br>
 
@@ -201,6 +237,9 @@
                                     
                                     <td>Company</td>
                                     <td>Item</td>
+                                    <td>Purchase Date</td>
+                                    <td>SI No.</td>
+                                    <td>Qty</td>
                                     <td>Brand</td>
                                     <td>Serial No.</td>
                                     <td>Date Release</td>
@@ -214,6 +253,9 @@
                             
                                     
                                     <tr>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
                                         <td></td>
                                         <td></td>
                                         <td></td>
