--- a/apps/static/style.css
+++ b/apps/static/style.css
@@ -36,11 +36,12 @@ body{
     overflow-x: hidden;
     padding-top: 60px;
     transition: 0.5s;
+    font-size: 10px; /* Adjust this value to resize the font */
 }
 .side-nav a{
     padding: 10px 10px 10px 30px;
     text-decoration: none;
-    font-size: 22px;
+    font-size: 10px; /* Adjust this value to resize the font */
     color:#ccc;
     display: block;
     transition: 0.3s;
@@ -54,6 +55,11 @@ body{
     background-color: #111;
 
 }
+
+.side-nav .dropdown-menu li a {
+    font-size: 10px; /* Adjust this value to resize the font */
+}
+
 .side-nav .btn-close{
     position:absolute;
     top: 0;
