--- a/apps/templates/dashboard.html
+++ b/apps/templates/dashboard.html
@@ -104,9 +104,9 @@
         
         
         <li class="dropdown">
-            <a href="#" class="dropdown-toggle">User</a>
+            <a href="#" class="dropdown-toggle">Payroll</a>
             <ul class="dropdown-menu">
-                <li><a href="#">Add User</a></li>
+                <li><a href="/api-payroll-temp/">Add Employee</a></li>
                
             </ul>
         </li>
