--- a/apps/templates/payroll/add_employee.html
+++ b/apps/templates/payroll/add_employee.html
@@ -107,7 +107,7 @@
               
                             
                             </div>
-                          </div>
+                        </div>
                         
                         
                       </div>
@@ -227,7 +227,7 @@
                                     <td>Salary Rate</td>
                                     <td>Employee Status</td>
                                     
-                                    <td></td>
+                                    <td>Action</td>
                                     
                                 </tr>
                             </thead>
@@ -235,6 +235,7 @@
                             
                                     
                                     <tr>
+                                        <td></td>
                                         <td></td>
                                         <td></td>
                                         <td></td>
